--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 <footer id="footer">
 	<div id="avatar">
 		<figure>
-			<img src="img/avatar.jpg" alt="">
+			<img src="img/avatar.jpg" alt="" />
 		</figure>
 		<p id='nombre'>Jordi Pàmies</p>
 		<p id='twitter'>@jpcpamies</p>
 	</div>
-	<div id='emial'><div class="icon-mail"></div></div>
-	<div id='github'><div class="icon-github"></div></div>
+	<a href="mailto:jordipamies2@gmail.com"><div id='emial'><div class="icon-mail"></div></div></a>
+	<a href="https://github.com/jpcpamies"><div id='github'><div class="icon-github"></div></div></a>
 </footer>
 <!--/ Footer principal -->
 </section>
