--- a/index.html
+++ b/index.html
@@ -61,11 +61,17 @@
 <!-- Footer principal -->
 <footer id="footer">
 	<div id="avatar">
-		<figure>
-			<img src="img/avatar.jpg" alt="" />
-		</figure>
 		<p id='nombre'>Jordi Pàmies</p>
 		<p id='twitter'>@jpcpamies</p>
+	</div>
+	<div id='logo_giratorio'>
+		<div class="fContainer">
+			<div class="fPanel">
+				<div class="front avatar">
+					<img class="avatar" src="img/avatar.jpg" /></div>
+					<div class="back avatar"><div class="icon-twitter"></div></div>
+			</div>
+		</div>
 	</div>
 	<a href="mailto:jordipamies2@gmail.com"><div id='emial'><div class="icon-mail"></div></div></a>
 	<a href="https://github.com/jpcpamies"><div id='github'><div class="icon-github"></div></div></a>
