Añadido el enlace de twitter

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="fPanel">
 				<div class="front avatar">
 					<img class="avatar" src="img/avatar.jpg" /></div>
-					<div class="back avatar"><div class="icon-twitter"></div></div>
+					<a href="https://twitter.com/jpcpamies"><div class="back avatar"><div class="icon-twitter"></div></div></a>
 			</div>
 		</div>
 	</div>
