--- a/index.html
+++ b/index.html
@@ -61,20 +61,21 @@
 <!-- Footer principal -->
 <footer id="footer">
 	<div id="avatar">
-		<p id='nombre'>Jordi Pàmies</p>
-		<p id='twitter'>@jpcpamies</p>
+		<a  id='nombre' href="https://twitter.com/jpcpamies" target="_blank">Jordi Pàmies</a>
+		<a  id='twitter' href="https://twitter.com/jpcpamies" target="_blank">@jpcpamies</a>
 	</div>
 	<div id='logo_giratorio'>
 		<div class="fContainer">
 			<div class="fPanel">
 				<div class="front avatar">
 					<img class="avatar" src="img/avatar.jpg" /></div>
-					<a href="https://twitter.com/jpcpamies"><div class="back avatar"><div class="icon-twitter"></div></div></a>
+					<a href="https://twitter.com/jpcpamies" target="_blank"><div class="back avatar"><div class="icon-twitter"></div></div></a>
 			</div>
 		</div>
 	</div>
-	<a href="mailto:jordipamies2@gmail.com"><div id='emial'><div class="icon-mail"></div></div></a>
-	<a href="https://github.com/jpcpamies"><div id='github'><div class="icon-github"></div></div></a>
+	<a href="mailto:jordipamies2@gmail.com" target="_blank"><div id='emial'><div class="icon-mail"></div></div></a>
+	<a href="https://github.com/jpcpamies" target="_blank"><div id='github'><div class="icon-github"></div></div></a>
+	<!-- <div id="fin_pagina"></div> -->
 </footer>
 <!--/ Footer principal -->
 </section>
