--- a/index.html
+++ b/index.html
@@ -23,8 +23,30 @@
  		<h2>Hacer un commit es como pegar un tiro</h2>
 	</div>
 	<nav id="menu">
-		<ul class="mobileMenu">
-			<li><a href="descripcion">Descripción de la guía</a></li>
+		<ul>
+			<a href="#descripcion"><li>Descripción de la guía</li></a>
+		</ul>
+		<a href=""><h3>Comandos básicos de terminal</h3></a>
+		<ul>
+			<a href="#descripcion"><li>Ver contenido del directorio</li></a>
+			<a href="#descripcion"><li>Ubicarse en un directorio</li></a>
+			<a href="#descripcion"><li>Crear nuevo directorio</li></a>
+		</ul>
+		<a href=""><h3>Empezar con GitHub</h3></a>
+		<ul>
+			<a href="#descripcion"><li>Crear una cuenta en GitHub</li></a>
+			<a href="#descripcion"><li>Instalar GitHub</li></a>
+			<a href="#descripcion"><li>Identificarse como usuario</li></a>
+			<a href="#descripcion"><li>Vincular el ordenador con GitHub por SSH</li></a>
+		</ul>
+		<a href=""><h3>Trabajar con GitHub</h3></a>
+		<ul>
+			<a href="#descripcion"><li>Crear repositorio en GitHub</li></a>
+			<a href="#descripcion"><li>Crear repositorio en local</li></a>
+			<a href="#descripcion"><li>Enlazar repositorio local con GitHub</li></a>
+			<a href="#descripcion"><li>Hacer cambios en el repositorio local</li></a>
+			<a href="#descripcion"><li>Hacer un commit es como pegar un tiro</li></a>
+			<a href="#descripcion"><li>Mandar los cambios a GitHub</li></a>
 		</ul>
 	</nav>
 </header>
@@ -75,7 +97,6 @@
 	</div>
 	<a href="mailto:jordipamies2@gmail.com" target="_blank"><div id='emial'><div class="icon-mail"></div></div></a>
 	<a href="https://github.com/jpcpamies" target="_blank"><div id='github'><div class="icon-github"></div></div></a>
-	<!-- <div id="fin_pagina"></div> -->
 </footer>
 <!--/ Footer principal -->
 </section>
