Varias mejoras en el menú vista escritorio

--- a/index.html
+++ b/index.html
@@ -24,30 +24,31 @@
 	</div>
 	<nav id="menu">
 		<ul>
-			<a href="#descripcion"><li>Descripción de la guía</li></a>
+			<a href="#descripcion"><li>Descripción de la guía <span class="icon-uniE613"></span></li></a>
 		</ul>
-		<a href=""><h3>Comandos básicos de terminal</h3></a>
+		<a href=""><h3>Comandos básicos de terminal<span class="icon-number"></span></h3></a>
 		<ul>
-			<a href="#descripcion"><li>Ver contenido del directorio</li></a>
-			<a href="#descripcion"><li>Ubicarse en un directorio</li></a>
-			<a href="#descripcion"><li>Crear nuevo directorio</li></a>
+			<a href="#descripcion"><li>Ver contenido del directorio <span class="icon-uniE613"></span></li></a>
+			<a href="#descripcion"><li>Ubicarse en un directorio <span class="icon-uniE613"></span></li></a>
+			<a href="#descripcion"><li>Crear nuevo directorio <span class="icon-uniE613"></span></li></a>
 		</ul>
-		<a href=""><h3>Empezar con GitHub</h3></a>
+		<a href=""><h3>Empezar con GitHub<span class="icon-number2"></span></h3></a>
 		<ul>
-			<a href="#descripcion"><li>Crear una cuenta en GitHub</li></a>
-			<a href="#descripcion"><li>Instalar GitHub</li></a>
-			<a href="#descripcion"><li>Identificarse como usuario</li></a>
-			<a href="#descripcion"><li>Vincular el ordenador con GitHub por SSH</li></a>
+			<a href="#descripcion"><li>Crear una cuenta en GitHub <span class="icon-uniE613"></span></li></a>
+			<a href="#descripcion"><li>Instalar GitHub <span class="icon-uniE613"></span></li></a>
+			<a href="#descripcion"><li>Identificarse como usuario <span class="icon-uniE613"></span></li></a>
+			<a href="#descripcion"><li>Vincular el ordenador con GitHub por SSH <span class="icon-uniE613"></span></li></a>
 		</ul>
-		<a href=""><h3>Trabajar con GitHub</h3></a>
+		<a href=""><h3>Trabajar con GitHub<span class="icon-number3"></span></h3></a>
 		<ul>
-			<a href="#descripcion"><li>Crear repositorio en GitHub</li></a>
-			<a href="#descripcion"><li>Crear repositorio en local</li></a>
-			<a href="#descripcion"><li>Enlazar repositorio local con GitHub</li></a>
-			<a href="#descripcion"><li>Hacer cambios en el repositorio local</li></a>
-			<a href="#descripcion"><li>Hacer un commit es como pegar un tiro</li></a>
-			<a href="#descripcion"><li>Mandar los cambios a GitHub</li></a>
+			<a href="#descripcion"><li>Crear repositorio en GitHub <span class="icon-uniE613"></span></li></a>
+			<a href="#descripcion"><li>Crear repositorio en local <span class="icon-uniE613"></span></li></a>
+			<a href="#descripcion"><li>Enlazar repositorio local con GitHub <span class="icon-uniE613"></span></li></a>
+			<a href="#descripcion"><li>Hacer cambios en el repositorio local <span class="icon-uniE613"></span></li></a>
+			<a href="#descripcion"><li>Hacer un commit es como pegar un tiro <span class="icon-uniE613"></span></li></a>
+			<a href="#descripcion"><li>Mandar los cambios a GitHub <span class="icon-uniE613"></span></li></a>
 		</ul>
+		<br>
 	</nav>
 </header>
 <!--/ Barra lateral con logo + menu -->
