Terminado de estilar menú vista escritorio

--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
 		<ul>
 			<a href="#descripcion"><li>Descripción de la guía <span class="icon-uniE613"></span></li></a>
 		</ul>
-		<a href=""><h3>Comandos básicos de terminal<span class="icon-number"></span></h3></a>
+		<a href=""><p>Comandos básicos de terminal<span class="icon-number"></span></p></a>
 		<ul>
 			<a href="#descripcion"><li>Ver contenido del directorio <span class="icon-uniE613"></span></li></a>
 			<a href="#descripcion"><li>Ubicarse en un directorio <span class="icon-uniE613"></span></li></a>
 			<a href="#descripcion"><li>Crear nuevo directorio <span class="icon-uniE613"></span></li></a>
 		</ul>
-		<a href=""><h3>Empezar con GitHub<span class="icon-number2"></span></h3></a>
+		<a href=""><p>Empezar con GitHub<span class="icon-number2"></span></p></a>
 		<ul>
 			<a href="#descripcion"><li>Crear una cuenta en GitHub <span class="icon-uniE613"></span></li></a>
 			<a href="#descripcion"><li>Instalar GitHub <span class="icon-uniE613"></span></li></a>
 			<a href="#descripcion"><li>Identificarse como usuario <span class="icon-uniE613"></span></li></a>
 			<a href="#descripcion"><li>Vincular el ordenador con GitHub por SSH <span class="icon-uniE613"></span></li></a>
 		</ul>
-		<a href=""><h3>Trabajar con GitHub<span class="icon-number3"></span></h3></a>
+		<a href=""><p>Trabajar con GitHub<span class="icon-number3"></span></p></a>
 		<ul>
 			<a href="#descripcion"><li>Crear repositorio en GitHub <span class="icon-uniE613"></span></li></a>
 			<a href="#descripcion"><li>Crear repositorio en local <span class="icon-uniE613"></span></li></a>
