--- a/index.html
+++ b/index.html
@@ -22,99 +22,247 @@
 		<h1>IniciaGit</h1>
  		<h2>Hacer un commit es como pegar un tiro</h2>
 	</div>
+	
+
+
 	<nav id="menu">
-		<ul>
-			<a href="#descripcion"><li><h4>Descripción de la guía</h4><span class="icon-uniE613"></span></li></a>
-		</ul>
-		<a href="#comandos"><h3>Comandos básicos de terminal<span class="icon-number"></span></h3></a>
-		<ul>
-			<a href="#descripcion"><li><h4>Ver contenido del directorio</h4><span class="icon-uniE613"></span></li></a>
-			<a href="#descripcion"><li><h4>Ubicarse en un directorio</h4><span class="icon-uniE613"></span></li></a>
-			<a href="#descripcion"><li><h4>Crear nuevo directorio</h4><span class="icon-uniE613"></span></li></a>
-		</ul>
-		<a href=""><h3>Empezar con GitHub<span class="icon-number2"></span></h3></a>
-		<ul>
-			<a href="#descripcion"><li><h4>Crear una cuenta en GitHub</h4><span class="icon-uniE613"></span></li></a>
-			<a href="#descripcion"><li><h4>Instalar GitHub</h4><span class="icon-uniE613"></span></li></a>
-			<a href="#descripcion"><li><h4>Identificarse como usuario</h4><span class="icon-uniE613"></span></li></a>
-			<a href="#descripcion"><li><h4>Vincular el ordenador con GitHub por SSH</h4><span class="icon-uniE613"></span></li></a>
-		</ul>
-		<a href=""><h3>Trabajar con GitHub<span class="icon-number3"></span></h3></a>
-		<ul>
-			<a href="#descripcion"><li><h4>Crear repositorio en GitHub</h4><span class="icon-uniE613"></span></li></a>
-			<a href="#descripcion"><li><h4>Crear repositorio en local</h4><span class="icon-uniE613"></span></li></a>
-			<a href="#descripcion"><li><h4>Enlazar repositorio local con GitHub</h4><span class="icon-uniE613"></span></li></a>
-			<a href="#descripcion"><li><h4>Hacer cambios en el repositorio local</h4><span class="icon-uniE613"></span></li></a>
-			<a href="#descripcion"><li><h4>Hacer un commit es como pegar un tiro</h4><span class="icon-uniE613"></span></li></a>
-			<a href="#descripcion"><li><h4>Mandar los cambios a GitHub</h4><span class="icon-uniE613"></span></li></a>
-		</ul>
-		<br>
+	<!-- Primer post  -->
+	<ul>
+		<li><a href="#descripcion_de_la_guia">Descripción de la guía<span class="icon-uniE613"></span></a></li>
+	</ul>
+	<!-- =============================================================================== -->
+
+	<!-- Capñitulo 1-->
+	<ul class='capitulo'>
+		<li><a href="#comandos_basicos_de_terminal">Comandos básicos de terminal<span class="icon-number"></span></a></li>
+	</ul>
+	<!-- Temas -->
+	<ul>
+		<li><a href="#ver_contenido_del_directorio">Ver contenido del directorio<span class="icon-uniE613"></span></a></li>
+		<li><a href="#ubicarse_en_un_directorio">Ubicarse en un directorio<span class="icon-uniE613"></span></a></li>
+		<li><a href="#crear_un_directorio">Crear un directorio<span class="icon-uniE613"></span></a></li>
+	</ul>
+	<!-- =============================================================================== -->
+
+	<!-- Capñitulo 2-->
+	<ul class='capitulo'>
+		<li><a href="#empezar_con_github">Empezar con GitHub<span class="icon-number2"></span></a></li>
+	</ul>
+	<!-- Temas -->
+	<ul>
+		<li><a href="#crear_una_cuenta_en_github">Crear una cuenta en GitHub<span class="icon-uniE613"></span></a></li>
+		<li><a href="#instalar_github">Instalar GitHub<span class="icon-uniE613"></span></a></li>
+		<li><a href="#identificarse_como_usuario">Identificarse como usuario<span class="icon-uniE613"></span></a></li>
+		<li><a href="#vincular_el_ordenador_con_GitHub_por_SSH">Vincular el ordenador con GitHub por SSH<span class="icon-uniE613"></span></a></li>
+	</ul>
+	<!-- =============================================================================== -->
+
+	<!-- Capñitulo 3-->
+	<ul class='capitulo'>
+		<li><a href="#trabajar_con_github">Trabajar con GitHub<span class="icon-number3"></span></a></li>
+	</ul>
+	<!-- Temas -->
+	<ul>
+		<li><a href="#crear_una_cuenta_en_github">Crear una cuenta en GitHub</a></li>
+		<li><a href="#instalar_github">Instalar GitHub</a></li>
+		<li><a href="#identificarse_como_usuario">Identificarse como usuario</a></li>
+		<li><a href="#vincular_el_ordenador_con_GitHub_por_SSH">Vincular el ordenador con GitHub por SSH</a></li>
+		<li><a href="#cuatro">cuatro</a></li>
+		<li><a href="#cuatro">cuatro</a></li>
+	</ul>
 	</nav>
 </header>
 <!--/ Barra lateral con logo + menu -->
+<!-- =============================================================================== -->
+
 <!-- Contenido princial -->
 <section id="contenido">
-	<article id="descripcion">
-		<header class="titulo">
-			<h1>Descripción de la guía</h1>
-		</header>
-		<div class="contenido">
-			<div class="texto">
-				<p>Esta guía básica te ayudará a usar GitHub con la terminal desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
-				<p>Con esta guía empezarás un proyecto propio en local y subirás cambios a tu repositorio en GitHub. Trabajarás en colaboración con personas de todo el mundo, haciendo Fork, Pull request y Merge. Además podrás alojar tu proyecto en un subdominio de GitHub, igual que lo está esta guía.</p>
-				<p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
-			</div>
-		</div>
+	<article id="descripcion_de_la_guia">
+		<p>Esta guía básica te ayudará a <strong>usar GitHub con la terminal</strong> desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
+		<p>Con esta guía empezarás un proyecto propio en local y subirás cambios a tu repositorio en GitHub. <strong>Trabajarás en colaboración</strong> con personas de todo el mundo, haciendo Fork, Pull request y Merge. Además podrás alojar tu proyecto en un subdominio de GitHub, igual que lo está esta guía.</p>
+		<p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
 	</article>
-	<article id="comandos">
-		<header class="titulo">
-			<h1>Comandos básicos de terminal</h1>
+	<article id="comandos_basicos_de_terminal">
+		<header>
+			<h3>Comandos básicos de terminal</h3>
+			<p>Empezar a usar GitHub desde la terminal se hace sencillo usando solo tres comandos. Si tu ya conoces el funcionamiento de la terminal puedes omitir este punto, esto para tí  está chupado.</p>
 		</header>
-		<section class="contenido">
-			<article id="ver_contenido">
-				<p>Empezar a usar GitHub desde la terminal se hace sencillo usando solo tres comandos. Si tu ya conoces el funcionamiento de la terminal puedes omitir este punto, esto para tí  está chupado.</p>
-				<h2><span>Ver contenido</span> del directorio</h2>
+		<section>
+			<article id='ver_contenido_del_directorio'>
+				<h4>Ver contenido del directorio</h4>
 				<p>Puedes ver el contenido de una carpeta con el siguiente comando.</p>
-		      	<!-- Terminal -->
-		      	<figure>
-			        <div class='terminal'>
-			          	<div class="barra"><pre id='barra'>Terminal</pre></div>
-			         	<div id='maquina'>
-			        		<pre>jordiimac$ <span class='tipear'>git --version</span><span class='copiar'>requesting install.</pre>
+			    <!-- Terminal -->
+			    <figure>
+		        	<div class='terminal'>
+		          		<div class="barra"><pre id='barra'>Terminal</pre></div>
+		          		<div id='maquina'>
+		            		<pre>iMac-de-Jordi:~ jordiimac$ <span class='tipear'>ls</span> <br> Applications     Documents     Dropbox     Movies     Pictures     Desktop     Downloads    Library     Music     Public iMac-de-Jordi:~ jordiimac$</pre>
 		          		</div>
-		          		<div class="nota">
+			          	<div class="nota">
 				            <div class="color_maquina"><p><span>Texto</span> máquina.</p></div>
 				            <div class="color_tipear"><p><span>Texto</span> a tipear.</p></div>
-				            <div class="color_copiar"><p><span>Texto</span> a copiar.</p></div>
-		          		</div>
-		        	</div>
+				            <div class="color_copiar"><p><span>Texto</span> a copiar.</p>
+			            </div>
+			          </div>
+			        </div>
 		      	</figure>
-		      	<!--/ Terminal -->
+		     	<!--/ Terminal -->
 			</article>
-			<article id="dos">
-				<p>Empezar a usar GitHub desde la terminal se hace sencillo usando solo tres comandos. Si tu ya conoces el funcionamiento de la terminal puedes omitir este punto, esto para tí  está chupado.</p>
-				<h2><span>Ver contenido</span> del directorio</h2>
-				<p>Puedes ver el contenido de una carpeta con el siguiente comando.</p>
-		      	<!-- Terminal -->
-		      	<figure>
-			        <div class='terminal'>
-			          	<div class="barra"><pre id='barra'>Terminal</pre></div>
-			         	<div id='maquina'>
-			        		<pre>jordiimac$ <span class='tipear'>git --version</span><span class='copiar'>requesting install.</pre>
+			<article id='ubicarse_en_un_directorio'>
+				<h4>Ubicarse en un directorio</h4>
+				<p>Puedes entrar en una carpeta con el siguiente comando.</p>
+			    <!-- Terminal -->
+			    <figure>
+		        	<div class='terminal'>
+		          		<div class="barra"><pre id='barra'>Terminal</pre></div>
+		          		<div id='maquina'>
+		            		<pre>iMac-de-Jordi:~ jordiimac$ <span class='tipear'>cd documents</span> <br>iMac-de-Jordi:documents jordiimac$</pre>
 		          		</div>
-		          		<div class="nota">
+			          	<div class="nota">
 				            <div class="color_maquina"><p><span>Texto</span> máquina.</p></div>
 				            <div class="color_tipear"><p><span>Texto</span> a tipear.</p></div>
-				            <div class="color_copiar"><p><span>Texto</span> a copiar.</p></div>
-		          		</div>
-		        	</div>
+				            <div class="color_copiar"><p><span>Texto</span> a copiar.</p>
+			            </div>
+			          </div>
+			        </div>
 		      	</figure>
-		      	<!--/ Terminal -->
+		     	<!--/ Terminal -->
+			</article>
+			<article id='crear_un_directorio'>
+				<h4>Crear un directorio</h4>
+				<p>Es importante poder crear directorios desde la terminal. Puedes hacerlo con este comando.</p>
+			    <!-- Terminal -->
+			    <figure>
+		        	<div class='terminal'>
+		          		<div class="barra"><pre id='barra'>Terminal</pre></div>
+		          		<div id='maquina'>
+		            		<pre>iMac-de-Jordi:~ jordiimac$ <span class='tipear'>mkdir miProyecto</span> <br>iMac-de-Jordi:documents jordiimac$</pre>
+		          		</div>
+			          	<div class="nota">
+				            <div class="color_maquina"><p><span>Texto</span> máquina.</p></div>
+				            <div class="color_tipear"><p><span>Texto</span> a tipear.</p></div>
+				            <div class="color_copiar"><p><span>Texto</span> a copiar.</p>
+			            </div>
+			          </div>
+			        </div>
+		      	</figure>
+		     	<!--/ Terminal -->
+		     	<p>Esto creará un directorio llamado “Mi nuevo directorio” justo en la hubicación en la que te encuentres. </p>
+		     	<figure>
+		     		<img src="http://placehold.it/600x300" alt="Documento creado">
+		     	</figure>
 			</article>
 		</section>
-		<footer class="social">
-			
-		</footer>
+	</article>
+	<article id="empezar_con_github">
+		<header>
+			<h3>Empezar con GitHub</h3>
+			<p>Los pasos de este apartado solo los tendrás que hacer una vez. Eso si, necesitarás repetirlos en cada ordenador que vayas a usar con tu cuenta de GitHub.</p>
+		</header>
+		<section>
+			<article id='crear_una_cuenta_en_github'>
+				<h4>Ver contenido del directorio</h4>
+				<p>Puedes ver el contenido de una carpeta con el siguiente comando.</p>
+			    <!-- Terminal -->
+			    <figure>
+		        	<div class='terminal'>
+		          		<div class="barra"><pre id='barra'>Terminal</pre></div>
+		          		<div id='maquina'>
+		            		<pre>iMac-de-Jordi:~ jordiimac$ <span class='tipear'>ls</span> <br> Applications     Documents     Dropbox     Movies     Pictures     Desktop     Downloads    Library     Music     Public iMac-de-Jordi:~ jordiimac$</pre>
+		          		</div>
+			          	<div class="nota">
+				            <div class="color_maquina"><p><span>Texto</span> máquina.</p></div>
+				            <div class="color_tipear"><p><span>Texto</span> a tipear.</p></div>
+				            <div class="color_copiar"><p><span>Texto</span> a copiar.</p>
+			            </div>
+			          </div>
+			        </div>
+		      	</figure>
+		     	<!--/ Terminal -->
+			</article>
+			<article id='instalar_github'>
+				<h4>Ubicarse en un directorio</h4>
+				<p>Puedes entrar en una carpeta con el siguiente comando.</p>
+			    <!-- Terminal -->
+			    <figure>
+		        	<div class='terminal'>
+		          		<div class="barra"><pre id='barra'>Terminal</pre></div>
+		          		<div id='maquina'>
+		            		<pre>iMac-de-Jordi:~ jordiimac$ <span class='tipear'>cd documents</span> <br>iMac-de-Jordi:documents jordiimac$</pre>
+		          		</div>
+			          	<div class="nota">
+				            <div class="color_maquina"><p><span>Texto</span> máquina.</p></div>
+				            <div class="color_tipear"><p><span>Texto</span> a tipear.</p></div>
+				            <div class="color_copiar"><p><span>Texto</span> a copiar.</p>
+			            </div>
+			          </div>
+			        </div>
+		      	</figure>
+		     	<!--/ Terminal -->
+			</article>
+			<article id='identificarse_como_usuario'>
+				<h4>Crear un directorio</h4>
+				<p>Es importante poder crear directorios desde la terminal. Puedes hacerlo con este comando.</p>
+			    <!-- Terminal -->
+			    <figure>
+		        	<div class='terminal'>
+		          		<div class="barra"><pre id='barra'>Terminal</pre></div>
+		          		<div id='maquina'>
+		            		<pre>iMac-de-Jordi:~ jordiimac$ <span class='tipear'>mkdir miProyecto</span> <br>iMac-de-Jordi:documents jordiimac$</pre>
+		          		</div>
+			          	<div class="nota">
+				            <div class="color_maquina"><p><span>Texto</span> máquina.</p></div>
+				            <div class="color_tipear"><p><span>Texto</span> a tipear.</p></div>
+				            <div class="color_copiar"><p><span>Texto</span> a copiar.</p>
+			            </div>
+			          </div>
+			        </div>
+		      	</figure>
+		     	<!--/ Terminal -->
+		     	<p>Esto creará un directorio llamado “Mi nuevo directorio” justo en la hubicación en la que te encuentres. </p>
+		     	<figure>
+		     		<img src="" alt="Documento creado">
+		     	</figure>
+			</article>
+			<article id='vincular_el_ordenador_con_GitHub_por_SSH'>
+				<h4>Crear un directorio</h4>
+				<p>Es importante poder crear directorios desde la terminal. Puedes hacerlo con este comando.</p>
+			    <!-- Terminal -->
+			    <figure>
+		        	<div class='terminal'>
+		          		<div class="barra"><pre id='barra'>Terminal</pre></div>
+		          		<div id='maquina'>
+		            		<pre>iMac-de-Jordi:~ jordiimac$ <span class='tipear'>mkdir miProyecto</span> <br>iMac-de-Jordi:documents jordiimac$</pre>
+		          		</div>
+			          	<div class="nota">
+				            <div class="color_maquina"><p><span>Texto</span> máquina.</p></div>
+				            <div class="color_tipear"><p><span>Texto</span> a tipear.</p></div>
+				            <div class="color_copiar"><p><span>Texto</span> a copiar.</p>
+			            </div>
+			          </div>
+			        </div>
+		      	</figure>
+		     	<!--/ Terminal -->
+		     	<p>Esto creará un directorio llamado “Mi nuevo directorio” justo en la hubicación en la que te encuentres. </p>
+		     	<figure>
+		     		<img src="" alt="Documento creado">
+		     	</figure>
+			</article>
+		</section>
+	</article>
+	<article id="trabajar_con_github">
+		<p>
+			<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, ipsa, eius error ratione sequi consequuntur commodi. Nesciunt, asperiores deserunt minima error beatae in ea fugit commodi sint voluptatibus laboriosam maxime?</span>
+			<span>Consequatur, repellendus, voluptatum reiciendis autem voluptatibus aut dolores tenetur ducimus at ratione blanditiis reprehenderit totam in deleniti doloremque nulla ullam explicabo rerum necessitatibus repellat nam praesentium architecto accusantium natus ad!</span>
+			<span>Alias, quod, hic, molestias, dolores laboriosam architecto impedit ipsa porro illo perferendis repudiandae veniam mollitia asperiores eius minima debitis nostrum ad officiis quidem doloribus cum nulla pariatur voluptatum distinctio labore!</span>
+			<span>Voluptas, explicabo, placeat, ab, nostrum tenetur commodi quaerat quisquam at beatae porro quo assumenda neque excepturi nemo accusamus architecto saepe ipsam fuga accusantium inventore illo ratione sequi dolorum possimus eum.</span>
+			<span>Provident, iste, sapiente soluta unde obcaecati odio quo molestiae quae consequatur eligendi! Adipisci, iure, voluptas, nihil totam labore voluptates ad sunt ut nisi iusto facilis mollitia quaerat soluta suscipit perferendis.</span>
+			<span>Et, ducimus labore explicabo repellendus voluptas similique esse. Quod, pariatur, voluptatibus atque quae esse laborum possimus aliquid maiores consectetur quis dolor nesciunt tenetur optio odio fuga ipsum ducimus harum enim.</span>
+			<span>Nisi, ipsam, placeat molestiae iure alias ut consectetur sed id et est eum hic corrupti in facilis totam natus vel dolorum. Excepturi, iste, neque ad ab voluptates numquam repellat repellendus!</span>
+			<span>Quaerat, sequi, aspernatur, laudantium, quos dolorum sapiente alias eos at corporis beatae assumenda doloremque natus? Assumenda, esse, excepturi, saepe magni modi iure minima cum delectus fuga necessitatibus repellendus aperiam ut?</span>
+			<span>Minima, voluptate at quidem labore non nihil eligendi culpa tempore sed magni laudantium ab perferendis aspernatur amet maxime voluptas delectus. Cupiditate, doloremque animi optio error nostrum omnis pariatur deserunt voluptatum.</span>
+			<span>Omnis, unde, soluta, natus impedit porro sequi voluptas quia fugiat quod corporis iure commodi consequuntur nesciunt fuga sunt labore laboriosam quis! Iure voluptas obcaecati sequi eveniet harum molestiae id iste.</span>
+		</p>
 	</article>
 </section>
 <!--/ Contenido princial -->
@@ -144,7 +292,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <!--/ Llamada api jquery -->
 <!-- Llamada a mi js -->
-<script src='js/main.js'></script>
+<script src='js/main-ck.js'></script>
 <!--/ Llamada a mi js -->
 <!-- Analityscs -->
 <script>
