Varias mejoras de estilo de los articles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<nav id="menu">
 	<!-- Primer post  -->
 	<ul>
-		<li><a href="#descripcion_de_la_guia">Descripción de la guía<span class="icon-uniE613"></span></a></li>
+		<li><a href="#iniciando">Iniciando<span class="icon-rocket"></span></a></li>
 	</ul>
 	<!-- =============================================================================== -->
 
@@ -77,15 +77,21 @@
 
 <!-- Contenido princial -->
 <section id="contenido">
-	<article id="descripcion_de_la_guia">
-		<h3>Descripción de la guía</h3>
-		<p>Esta guía básica te ayudará a <strong>usar GitHub con la terminal</strong> desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
-		<p>Con esta guía empezarás un proyecto propio en local y subirás cambios a tu repositorio en GitHub. <strong>Trabajarás en colaboración</strong> con personas de todo el mundo, haciendo Fork, Pull request y Merge. Además podrás alojar tu proyecto en un subdominio de GitHub, igual que lo está esta guía.</p>
-		<p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
+	<article id="iniciando">
+		<header id="intra_article">
+			<div class="capitulo"><span class='icon-rocket'></span></div>
+			<h3>Iniciando</h3>
+			<p>&nbsp</p>
+		</header>
+			<p>Esta guía básica te ayudará a <strong>usar GitHub con la terminal</strong> desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
+			<p>Con esta guía empezarás un proyecto propio en local y subirás cambios a tu repositorio en GitHub. <strong>Trabajarás en colaboración</strong> con personas de todo el mundo, haciendo Fork, Pull request y Merge. Además podrás alojar tu proyecto en un subdominio de GitHub, igual que lo está esta guía.</p>
+			<p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
 	</article>
 	<article id="comandos_basicos_de_terminal">
-		<header>
-			<h3><strong>Comandos</strong> básicos de terminal</h3>
+		<header id="intra_article">
+			<div class="capitulo"><span class='icon-number'></span></div>
+			<h3>Comandos básicos de terminal</h3>
+			<p>&nbsp</p>
 			<p>Empezar a usar GitHub desde la terminal se hace sencillo usando solo tres comandos. Si tu ya conoces el funcionamiento de la terminal puedes omitir este punto, esto para tí  está chupado.</p>
 		</header>
 		<section>
@@ -156,8 +162,10 @@
 		</section>
 	</article>
 	<article id="empezar_con_github">
-		<header>
-			<h3><strong>Empezar</strong> con GitHub</h3>
+		<header id="intra_article">
+			<div class="capitulo"><span class='icon-number2'></span></div>
+			<h3>Empezar con GitHub</h3>
+			<p>&nbsp</p>
 			<p>Los pasos de este apartado solo los tendrás que hacer una vez. Eso si, necesitarás repetirlos en cada ordenador que vayas a usar con tu cuenta de GitHub.</p>
 		</header>
 		<section>
@@ -332,6 +340,12 @@
 		</section>
 	</article>
 	<article id="trabajar_con_github">
+		<header id="intra_article">
+			<div class="capitulo"><span class='icon-number3'></span></div>
+			<h3>Trabajar con GitHub</h3>
+			<p>&nbsp</p>
+			<p>Los pasos de este apartado solo los tendrás que hacer una vez. Eso si, necesitarás repetirlos en cada ordenador que vayas a usar con tu cuenta de GitHub.</p>
+		</header>
 		<p>
 			<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, ipsa, eius error ratione sequi consequuntur commodi. Nesciunt, asperiores deserunt minima error beatae in ea fugit commodi sint voluptatibus laboriosam maxime?</span>
 			<span>Consequatur, repellendus, voluptatum reiciendis autem voluptatibus aut dolores tenetur ducimus at ratione blanditiis reprehenderit totam in deleniti doloremque nulla ullam explicabo rerum necessitatibus repellat nam praesentium architecto accusantium natus ad!</span>
